--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <!-- Metadata to ensure proper rendering and touch zooming on devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Meta name Description is an HTML element that summarizes your web page. -->
-    <meta name="description" content="Official Website of Demajobs City">
+    <meta name="description" content="Official Website of Elevation City">
     <!-- To give credit to the person of company that made your website -->
     <meta name="author" content="Prinesty">
     <!-- Page Title-->
@@ -33,14 +33,14 @@
           <div class="row">
             <!-- Welcome Home Message -->
             <div class="navHide col-sm-8 col-md-7 py-3">
-              <h5>About Demajobs City</h5>
+              <h5>About Elevation City</h5>
               <p class="text-muted">
                 Who We Are? <br>
                 What We Are? <br>
                 What We Stand For? <br>
-                Get to know more about Demajobs City
+                Get to know more about Elevation City
               </p>
-              <img class="img-fluid" src="resources/images/logo.png" alt="Image of Demajobs Logo">
+              <img class="img-fluid" src="resources/images/logo.png" alt="Image of Elevation Logo">
             </div>
             <!-- Main Menu -->
             <div class="main-menu col-sm-4 offset-md-1 py-3">
@@ -57,7 +57,7 @@
       <!-- Navbar Toggler with Logo -->
       <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex">
-          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo.png" width="200" alt="Image of Demajobs Logo"></a>
+          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo.png" width="200" alt="Image of Elevation Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
@@ -82,7 +82,7 @@
                 <h4>Overview</h4> <br>
                 <img class="img-fluid" src="resources/images/overview.jpg" style="border-radius: 2%" alt="overview img">
                 <p class="p-4">
-                  Demajobs City’s main objective is to know Christ Jesus and
+                  Elevation City’s main objective is to know Christ Jesus and
                   make Him known to all. All the activities of the city will
                   be directed at building a strong platform for Christians
                   to deepen their experience of Christ Jesus.
@@ -141,12 +141,12 @@
             <!-- Contact -->
             <div class="col-md-4 mb-5">
               <h5 class="my-3">Contact Us</h5>
-              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#!" target="_blank">Demajobs City</a></p>
+              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#!" target="_blank">Elevation City</a></p>
               <!-- <p><i class="fas fa-location-arrow fa-lg pr-2"></i> <a href="#!" target="_blank">....</a> </p> -->
               <p><i class="fas fa-map-marker-alt fa-lg pr-3"></i> <a href="https://www.ghanapostgps.com/map/#CA60572298" target="_blank">Digital Address: CA-6057-2298</a></p>
               <p><i class="fas fa-address-card fa-lg pr-2"></i> P. O. Box KF 883, Koforidua</p>
               <p><i class="fas fa-phone-volume fa-lg pr-3"></i> 0557327541</p>
-              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="mailto:demajobscity@gmail.com" target="_blank">demajobscity@gmail.com</a></p>
+              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="mailto:elevationcity@gmail.com" target="_blank">elevationcity@gmail.com</a></p>
             </div>
             <!-- Featured Links -->
             <div class="col-md-4 mb-5">
@@ -166,7 +166,7 @@
           </div>
           <!-- Copyright -->
           <div class="copyright border-top mt-4 pt-5 text-center">
-            <p>&copy; 2023 Official Website of Demajobs City. All rights reserved</p>
+            <p>&copy; 2023 Official Website of Elevation City. All rights reserved</p>
             <small>Powered By <a href="#!">WebHive Agency</a></small>
           </div>
         </div>
