--- a/history.html
+++ b/history.html
@@ -6,11 +6,11 @@
     <!-- Metadata to ensure proper rendering and touch zooming on devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Meta name Description is an HTML element that summarizes your web page. -->
-    <meta name="description" content="Official Website of Demajobs City">
+    <meta name="description" content="Official Website of Elevation City">
     <!-- To give credit to the person of company that made your website -->
     <meta name="author" content="Prinesty">
     <!-- Page Title-->
-    <title>History of Demajobs City</title>
+    <title>History of Elevation City</title>
     <!-- Reset Stylesheet -->
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <!-- Bootstrap CSS -->
@@ -35,9 +35,9 @@
             <div class="navHide col-sm-8 col-md-7 py-3">
               <h5>History</h5>
               <p class="text-muted">
-                The initial work of the Demajobs City started in the year 2007
+                The initial work of the Elevation City started in the year 2007
               </p>
-              <img class="img-fluid" src="resources/images/logo.png" alt="Image of Demajobs Logo">
+              <img class="img-fluid" src="resources/images/logo.png" alt="Image of Elevation Logo">
             </div>
             <!-- Main Menu -->
             <div class="main-menu col-sm-4 offset-md-1 py-3">
@@ -54,7 +54,7 @@
       <!-- Navbar Toggler with Logo -->
       <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex">
-          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo.png" width="200" alt="Image of Demajobs Logo"></a>
+          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo.png" width="200" alt="Image of Elevation Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
@@ -84,20 +84,20 @@
           <!-- Heading -->
           <div class="heading py-3">
             <h1>The History</h1>
-            <p class="text-muted"><i class="fas fa-history"></i> Brief History of Demajobs City</p>
+            <p class="text-muted"><i class="fas fa-history"></i> Brief History of Elevation City</p>
           </div>
           <!-- Brief History -->
           <div class="brief pb-5">
             <h5>
-              The initial work of the Demajobs City started in the year 2007. <br><br>
+              The initial work of the Elevation City started in the year 2007. <br><br>
               Even without physical structures to show, some pastors and a group
                of individuals have already been exposed to the vision of the
                above. A few publications, “The Gap” were made available to these
                 groups of people for them to appreciate the missions,
-                projections and propositions of the Demajobs City. <br><br>
+                projections and propositions of the Elevation City. <br><br>
                 The initial responses of the pastors were that the vision is too
                  big for a place like Ghana; however, they did not doubt the
-                 Demajobs City’s place in the life of the church.
+                 Elevation City’s place in the life of the church.
                   <br>
                   Their final resolution however was that because the project is
                    of God, he
@@ -112,7 +112,7 @@
                  compared with what God has done in the past, is doing right
                  now and will do in the future.  <br><br>
                  This is what raises our hopes
-                 and faith that the Demajobs City is God’s agenda for today.
+                 and faith that the Elevation City is God’s agenda for today.
             </h5>
           </div>
         </div>
@@ -124,12 +124,12 @@
             <!-- Contact -->
             <div class="col-md-4 mb-5">
               <h5 class="my-3">Contact Us</h5>
-              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#!" target="_blank">Demajobs City</a></p>
+              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#!" target="_blank">Elevation City</a></p>
               <!-- <p><i class="fas fa-location-arrow fa-lg pr-2"></i> <a href="#!" target="_blank">....</a> </p> -->
               <p><i class="fas fa-map-marker-alt fa-lg pr-3"></i> <a href="https://www.ghanapostgps.com/map/#CA60572298" target="_blank">Digital Address: CA-6057-2298</a></p>
               <p><i class="fas fa-address-card fa-lg pr-2"></i> P. O. Box KF 883, Koforidua</p>
               <p><i class="fas fa-phone-volume fa-lg pr-3"></i> 0557327541</p>
-              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="mailto:demajobscity@gmail.com" target="_blank">demajobscity@gmail.com</a></p>
+              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="mailto:elevationcity@gmail.com" target="_blank">elevationcity@gmail.com</a></p>
             </div>
             <!-- Featured Links -->
             <div class="col-md-4 mb-5">
@@ -149,7 +149,7 @@
           </div>
           <!-- Copyright -->
           <div class="copyright border-top mt-4 pt-5 text-center">
-            <p>&copy; 2023 Official Website of Demajobs City. All rights reserved</p>
+            <p>&copy; 2023 Official Website of Elevation City. All rights reserved</p>
             <small>Powered By <a href="#!">WebHive Agency</a></small>
           </div>
         </div>
