--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <!-- Metadata to ensure proper rendering and touch zooming on devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Meta name Description is an HTML element that summarizes your web page. -->
-    <meta name="description" content="Official Website of Demajobs City">
+    <meta name="description" content="Official Website of Elevation City">
     <!-- To give credit to the person of company that made your website -->
     <meta name="author" content="Prinesty">
     <!-- Page Title-->
-    <title>Demajobs City</title>
+    <title>Elevation City</title>
     <!-- Reset Stylesheet -->
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <!-- Bootstrap CSS -->
@@ -35,11 +35,11 @@
             <div class="navHide col-sm-8 col-md-7 py-3">
               <h5>Welcome</h5>
               <p class="text-muted">
-                Demajobs City’s main objective is to know Christ Jesus and make Him known to all.
+                Elevation City’s main objective is to know Christ Jesus and make Him known to all.
                 All the activities of the city will be directed at building a strong platform for
                 Christians to deepen their experience of Christ Jesus.
               </p>
-              <img class="img-fluid" src="resources/images/logo.png" alt="Image of Demajobs Logo">
+              <img class="img-fluid" src="resources/images/logo.png" alt="Image of Elevation Logo">
             </div>
             <!-- Main Menu -->
             <div class="main-menu col-sm-4 offset-md-1 py-3">
@@ -56,7 +56,7 @@
       <!-- Navbar Toggler with Logo -->
       <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex">
-          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo.png" width="200" alt="Image of Demajobs Logo"></a>
+          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo.png" width="200" alt="Image of Elevation Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
@@ -222,7 +222,7 @@
         <div class="jumbotron">
           <div class="row">
             <div class="col-md-7 pb-4">
-              <p class="font-weight-bold display-4">Demajobs City</p>
+              <p class="font-weight-bold display-4">Elevation City</p>
               <h3 class="lead">To know Christ Jesus and make Him known to all...</h3>
               <p class="pt-4"><a href="about.html"><button class="btn btn-lg btn-info" type="button" name="button">About Us</button></a></p>
             </div>
@@ -261,11 +261,11 @@
                         Scripture Union Ghana (S.U.), The Eastern Regional Chairman
                         of the Scripture Union (S.U.) Ghana and a Jerusalem Pilgrim (JP) <br><br>
                         As an Executive Director, is responsible for providing spiritual
-                        oversight of the entire operations of the “Demajobs City’.
+                        oversight of the entire operations of the “Elevation City’.
                         The primary duties are as follows. <br>
                         To prepare and keep an up-to-date
-                        report on all the spiritual undertakings of the ‘Demajobs City’, <br>
-                        Offer direction as to the use of the facilities of 'Demajobs 	City'. <br>
+                        report on all the spiritual undertakings of the ‘Elevation City’, <br>
+                        Offer direction as to the use of the facilities of 'Elevation City'. <br>
                         Be well versed in new trends in Christian Education and worship. <br><br>
                         He stands for fairness and justice and also believes in the Bible
                         is a guide in our daily lives.
@@ -316,12 +316,12 @@
             <!-- Contact -->
             <div class="col-md-4 mb-5">
               <h5 class="my-3">Contact Us</h5>
-              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#!" target="_blank">Demajobs City</a></p>
+              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#!" target="_blank">Elevation City</a></p>
               <!-- <p><i class="fas fa-location-arrow fa-lg pr-2"></i> <a href="#!" target="_blank">....</a> </p> -->
               <p><i class="fas fa-map-marker-alt fa-lg pr-3"></i> <a href="https://www.ghanapostgps.com/map/#CA60572298" target="_blank">Digital Address: CA-6057-2298</a></p>
               <p><i class="fas fa-address-card fa-lg pr-2"></i> P. O. Box KF 883, Koforidua</p>
               <p><i class="fas fa-phone-volume fa-lg pr-3"></i> 0557327541</p>
-              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="mailto:demajobscity@gmail.com" target="_blank">demajobscity@gmail.com</a></p>
+              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="mailto:elevationcity@gmail.com" target="_blank">elevationcity@gmail.com</a></p>
             </div>
             <!-- Featured Links -->
             <div class="col-md-4 mb-5">
@@ -341,7 +341,7 @@
           </div>
           <!-- Copyright -->
           <div class="copyright border-top mt-4 pt-5 text-center">
-            <p>&copy; 2023 Official Website of Demajobs City. All rights reserved</p>
+            <p>&copy; 2023 Official Website of Elevation City. All rights reserved</p>
             <small>Powered By <a href="#!">WebHive Agency</a></small>
           </div>
         </div>
