--- a/location.html
+++ b/location.html
@@ -6,11 +6,11 @@
     <!-- Metadata to ensure proper rendering and touch zooming on devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Meta name Description is an HTML element that summarizes your web page. -->
-    <meta name="description" content="Official Website of Demajobs City">
+    <meta name="description" content="Official Website of Elevation City">
     <!-- To give credit to the person of company that made your website -->
     <meta name="author" content="Prinesty">
     <!-- Page Title-->
-    <title>Location of Demajobs City</title>
+    <title>Location of Elevation City</title>
     <!-- Reset Stylesheet -->
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <!-- Bootstrap CSS -->
@@ -40,12 +40,12 @@
           <!-- Heading -->
           <div class="py-3">
             <h1>Location</h1>
-            <p class="text-muted">Location of Demajobs City</p>
+            <p class="text-muted">Location of Elevation City</p>
           </div>
           <!-- Location -->
           <div class="brief">
             <p>
-              The site of the Demajobs City covers an area of approximately 4.54 acres
+              The site of the Elevation City covers an area of approximately 4.54 acres
               (16 plots). The choice of the hills of Yamoransa to site this centre
               was also a big answer to prayer. It is a purposeful move to locate the
                centre far away from any one particular church tradition. At the same time,
@@ -59,18 +59,18 @@
                where the northern belt of Ghana connects to the southern part of
                the country towards the western border. <br><br>
 
-               The location of the Demajobs City allows for easy access of people
+               The location of the Elevation City allows for easy access of people
                to the centre from all over the country of Ghana. It is also not
                far from the capital city of Ghana, known as Accra. For this reason,
                foreign nationals visiting the centre for the first time will not travel
-               for long hours within Ghana to find the Demajobs City. <br><br>
+               for long hours within Ghana to find the Elevation City. <br><br>
 
-               The Demajobs City's closeness to Cape Coast also offers an added
+               The Elevation City's closeness to Cape Coast also offers an added
                value because Cape Coast is a major entry point for all the mainline
                churches (The Roman Catholic Church, Presbyterian Church, Anglican
                Church and the Methodist Church) and this makes Cape Coast a major
                component in the discussions of the History of Christianity in Ghana.
-               By implication, the Demajobs City will take advantage of this rich
+               By implication, the Elevation City will take advantage of this rich
                Christian heritage of Ghana as part of the activities which branches
                off into three basic dimensions: PrayerCity; ReformationCity and AgedCity. <br><br>
 
