--- a/phases.html
+++ b/phases.html
@@ -6,11 +6,11 @@
     <!-- Metadata to ensure proper rendering and touch zooming on devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Meta name Description is an HTML element that summarizes your web page. -->
-    <meta name="description" content="Official Website of Demajobs City">
+    <meta name="description" content="Official Website of Elevation City">
     <!-- To give credit to the person of company that made your website -->
     <meta name="author" content="Prinesty">
     <!-- Page Title-->
-    <title>Phases of Demajobs City</title>
+    <title>Phases of Elevation City</title>
     <!-- Reset Stylesheet -->
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <!-- Bootstrap CSS -->
@@ -40,7 +40,7 @@
           <!-- Heading -->
           <div class="py-3">
             <h1>Project Phases</h1>
-            <p class="text-muted">Phases of Demajobs City</p>
+            <p class="text-muted">Phases of Elevation City</p>
           </div>
           <!-- Phases -->
           <div class="brief">
@@ -49,7 +49,7 @@
               The first phase consists of securing the drawings of the architectural
               designs of the centre. This will include the initial preparation
               of the land, considerations for landscaping, and decisions for
-              building models of the Demajobs City.  <br> <br>
+              building models of the Elevation City.  <br> <br>
 
                The second phase will involve the breaking of the soil for
                the building of the foundations of the various structures.
