--- a/intro.html
+++ b/intro.html
@@ -6,11 +6,11 @@
     <!-- Metadata to ensure proper rendering and touch zooming on devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Meta name Description is an HTML element that summarizes your web page. -->
-    <meta name="description" content="Official Website of Demajobs City">
+    <meta name="description" content="Official Website of Elevation City">
     <!-- To give credit to the person of company that made your website -->
     <meta name="author" content="Prinesty">
     <!-- Page Title-->
-    <title>Introduction to Demajobs City</title>
+    <title>Introduction to Elevation City</title>
     <!-- Reset Stylesheet -->
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <!-- Bootstrap CSS -->
@@ -40,7 +40,7 @@
           <!-- Heading -->
           <div class="py-3">
             <h1>Introduction</h1>
-            <p class="text-muted">Introduction to Demajobs City</p>
+            <p class="text-muted">Introduction to Elevation City</p>
           </div>
           <!-- Brief Intro -->
           <div class="brief">
@@ -81,21 +81,21 @@
                will go on around the clock together with some direct efforts
                of providing social relief services and health care in the heart
                of Africa is long overdue. The ideals that precipitated the
-               concept of “Demajobs City” were simply based on finding a place
+               concept of “Elevation City” were simply based on finding a place
                 that can provide a serene and conducive environment away from home.
-                The primary preoccupations of the Demajobs City are prayer,
+                The primary preoccupations of the Elevation City are prayer,
                 reformation of the youth and the aged. These, in very clear
                 terms must be considered as priority areas of concentration
                 within the context of the Kingdom of God. <br><br>
 
-              It is on purpose that the centre's name has been coined as “Demajobs City”.
+              It is on purpose that the centre's name has been coined as “Elevation City”.
               This is intended to make the city stand out different and also unique
               from all other places that may bear a similar name. The name has been
-              composed as two distinct words, 'Demajobs’ and ‘City'. This expression
+              composed as two distinct words, 'Elevation’ and ‘City'. This expression
               in its right context defines the scope of operations and also addresses
               completely the centre's mission statement. To capture in full what the
               centre stands for without any ambiguities, and to affirm its uniqueness,
-              the centre is named and known as Demajobs City. A place where spiritual
+              the centre is named and known as Elevation City. A place where spiritual
               illumination through prayer brings full transformation in the lives of
               people. Here, transformation is materialised when help and breakthroughs
               are felt by the people in terms of being corporately and socially
@@ -108,7 +108,7 @@
              and not just only those who would patronize the centre but also the
              communities far and near. <br><br>
 
-             In addition to the following, the Demajobs City will be one of the
+             In addition to the following, the Elevation City will be one of the
              greatest investments in the lives of people in the neighbourhood of
               Yamoransa and the world as a whole. The various developmental
               structures that may be put up may serve as a sustained income for
