--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@
     <!-- Metadata to ensure proper rendering and touch zooming on devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Meta name Description is an HTML element that summarizes your web page. -->
-    <meta name="description" content="Official Website of Demajobs City">
+    <meta name="description" content="Official Website of Elevation City">
     <!-- To give credit to the person of company that made your website -->
     <meta name="author" content="Prinesty">
     <!-- Page Title-->
@@ -35,9 +35,9 @@
             <div class="navHide col-sm-8 col-md-7 py-3">
               <h5>The Team</h5>
               <p class="text-muted">
-                The Management Team of Demajobs City
+                The Management Team of Elevation City
               </p>
-              <img class="img-fluid" src="resources/images/logo.png" alt="Image of Demajobs Logo">
+              <img class="img-fluid" src="resources/images/logo.png" alt="Image of Elevation Logo">
             </div>
             <!-- Main Menu -->
             <div class="main-menu col-sm-4 offset-md-1 py-3">
@@ -54,7 +54,7 @@
       <!-- Navbar Toggler with Logo -->
       <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex">
-          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo.png" width="200" alt="Image of Demajobs Logo"></a>
+          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo.png" width="200" alt="Image of Elevation Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
@@ -185,7 +185,7 @@
         <p class="lead font-weight-bold py-3">Board of Patrons and Patroness</p>
         <p>This is a five-member board that serves
         as the advisory team of the centre. The membership is composed of individuals
-        with clear understanding of the philosophy of the 'Demajobs City.'
+        with clear understanding of the philosophy of the 'Elevation City.'
         These include people of diverse interests and educational fields,
         such as:
         Police;
@@ -203,12 +203,12 @@
             <!-- Contact -->
             <div class="col-md-4 mb-5">
               <h5 class="my-3">Contact Us</h5>
-              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#!" target="_blank">Demajobs City</a></p>
+              <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#!" target="_blank">Elevation City</a></p>
               <!-- <p><i class="fas fa-location-arrow fa-lg pr-2"></i> <a href="#!" target="_blank">....</a> </p> -->
               <p><i class="fas fa-map-marker-alt fa-lg pr-3"></i> <a href="https://www.ghanapostgps.com/map/#CA60572298" target="_blank">Digital Address: CA-6057-2298</a></p>
               <p><i class="fas fa-address-card fa-lg pr-2"></i> P. O. Box KF 883, Koforidua</p>
               <p><i class="fas fa-phone-volume fa-lg pr-3"></i> 0557327541</p>
-              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="mailto:demajobscity@gmail.com" target="_blank">demajobscity@gmail.com</a></p>
+              <p><i class="fas fa-envelope fa-lg pr-3"></i><a href="mailto:elevationcity@gmail.com" target="_blank">elevationcity@gmail.com</a></p>
             </div>
             <!-- Featured Links -->
             <div class="col-md-4 mb-5">
@@ -228,7 +228,7 @@
           </div>
           <!-- Copyright -->
           <div class="copyright border-top mt-4 pt-5 text-center">
-            <p>&copy; 2023 Official Website of Demajobs City. All rights reserved</p>
+            <p>&copy; 2023 Official Website of Elevation City. All rights reserved</p>
             <small>Powered By <a href="#!">WebHive Agency</a></small>
           </div>
         </div>
