--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&amp;family=Roboto:wght@300&amp;display=swap" rel="stylesheet">
     <!--Favicon -->
-    <link rel="shortcut icon" href="resources/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="resources/images/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
