--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                 What We Stand For? <br>
                 Get to know more about Elevation City
               </p>
-              <img class="img-fluid" src="resources/images/logo.png" alt="Image of Elevation Logo">
+              <img class="img-fluid" src="resources/images/logo2.png" width="150" alt="Image of Elevation Logo">
             </div>
             <!-- Main Menu -->
             <div class="main-menu col-sm-4 offset-md-1 py-3">
@@ -57,7 +57,7 @@
       <!-- Navbar Toggler with Logo -->
       <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex">
-          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo.png" width="200" alt="Image of Elevation Logo"></a>
+          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo2.png" width="150" alt="Image of Elevation Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
