--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&amp;family=Roboto:wght@300&amp;display=swap" rel="stylesheet">
     <!--Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="shortcut icon" href="resources/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="resources/images/favicon.ico" type="image/x-icon">
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
@@ -41,7 +39,7 @@
                 All the activities of the city will be directed at building a strong platform for
                 Christians to deepen their experience of Christ Jesus.
               </p>
-              <img class="img-fluid" src="resources/images/logo2.png" width="120" alt="Image of Elevation Logo">
+              <img class="img-fluid" src="resources/images/logo2.png" width="150" alt="Image of Elevation Logo">
             </div>
             <!-- Main Menu -->
             <div class="main-menu col-sm-4 offset-md-1 py-3">
@@ -56,9 +54,9 @@
         </div>
       </nav>
       <!-- Navbar Toggler with Logo -->
-      <nav class="navbar navbar-dark" style="background-color: #000000">
+      <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex">
-          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo1.png" width="100" alt="Image of Elevation Logo"></a>
+          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo2.png" width="100" alt="Image of Elevation Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
