--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         </div>
       </nav>
       <!-- Navbar Toggler with Logo -->
-      <nav class="navbar navbar-dark bg-dark">
+      <nav class="navbar navbar-light" style="background-color: #008080;">
         <div class="container d-flex">
-          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo2.png" width="100" alt="Image of Elevation Logo"></a>
+          <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo2.png" width="150" alt="Image of Elevation Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
             </span>
