--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
       </nav>
       <!-- Navbar Toggler with Logo -->
-      <nav class="navbar navbar-light" style="background-color: #008080;">
+      <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
         <div class="container d-flex">
           <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo2.png" width="150" alt="Image of Elevation Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
