--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         </div>
       </nav>
       <!-- Navbar Toggler with Logo -->
-      <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+      <!--style="background-color: #e3f2fd;"-->
+      <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex">
           <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo2.png" width="150" alt="Image of Elevation Logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
@@ -255,7 +256,7 @@
               </div>
               <div class="py-4 border-bottom text-center">
                 <img class="img-fluid" src="resources/images/executived.jpeg" style="border-radius: 50%"  width="275" alt="img of Rev.">
-                <p class="font-weight-bold lead pt-2 pb-1">Rev. Dennis J. Boadu</p>
+                <p class="font-weight-bold lead pt-2 pb-1">Very Rev. Dennis J. Boadu</p>
                 <button class="btn btn-md btn-secondary" type="button" name="button" data-toggle="modal" data-target="#exe-profile">Read more</button>
               </div>
               <div class="modal" id="exe-profile" tabindex="-1" role="dialog" aria-labelledby="modalScrollableLabel" aria-hidden="true">
