--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
         </div>
       </nav>
       <!-- Main Body -->
+      <div id="banner" class="container-fluid">
+        <div class="jumbotron">
+          <div class="row">
+            <div class="col-md-7 pb-4">
+              <p class="font-weight-bold display-4">Elevation City</p>
+              <h3 class="lead">To know Christ Jesus and make Him known to all...</h3>
+              <p class="pt-4"><a href="about.html"><button class="btn btn-lg btn-info" type="button" name="button">About Us</button></a></p>
+            </div>
+            <div class="col-md-5">
+            </div>
+          </div>
+        </div>
+      </div>
       <div id="slideshow">
         <div class="mb-4">
           <div id="carouselCaptions" class="carousel slide" data-ride="carousel">
@@ -234,6 +247,7 @@
           </div>
         </div>
       </div>
+      <!--
       <div id="banner" class="container">
         <div class="jumbotron">
           <div class="row">
@@ -246,7 +260,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
       <div class="cover">
         <div class="container my-2">
           <div class="row">
