--- a/index.html
+++ b/index.html
@@ -80,15 +80,13 @@
         </div>
       </nav>
       <!-- Main Body -->
-      <div id="banner" class="container-fluid">
-        <div class="jumbotron">
+      <div id="banner">
+        <div class="jumbotron jumbotron-fluid">
           <div class="row">
             <div class="col-md-7 pb-4">
               <p class="font-weight-bold display-4">Elevation City</p>
               <h3 class="lead">To know Christ Jesus and make Him known to all...</h3>
               <p class="pt-4"><a href="about.html"><button class="btn btn-lg btn-info" type="button" name="button">About Us</button></a></p>
-            </div>
-            <div class="col-md-5">
             </div>
           </div>
         </div>
