--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
         </div>
       </div>
-      <div id="slideshow">
+      <div class="container" id="slideshow">
         <div class="mb-4">
           <div id="carouselCaptions" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
