--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
       <!-- Main Body -->
       <div id="banner">
         <div class="jumbotron jumbotron-fluid">
-          <div class="row">
+          <div class="container row">
             <div class="col-md-7 pb-4">
-              <p class="font-weight-bold display-4">Elevation City</p>
-              <h3 class="lead">To know Christ Jesus and make Him known to all...</h3>
+              <h2 class="font-weight-bold display-4">Elevation City</h2>
+              <h3 class="lead font-weight-bold">To know Christ Jesus and make Him known to all...</h3>
               <p class="pt-4"><a href="about.html"><button class="btn btn-lg btn-info" type="button" name="button">About Us</button></a></p>
             </div>
           </div>
