--- a/index.html
+++ b/index.html
@@ -169,40 +169,6 @@
           </div>
         </div>
       </div>
-      <div class="container" id="slideshow">
-        <div class="mb-4">
-          <div id="carouselCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselCaptions" data-slide-to="1" class="active"></li>
-              <li data-target="#carouselCaptions" data-slide-to="2"></li>
-              <li data-target="#carouselCaptions" data-slide-to="3"></li>
-              <li data-target="#carouselCaptions" data-slide-to="4"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active">
-                <img class="img-fluid" alt="1" src="resources/images/slide1.png">
-              </div>
-              <div class="carousel-item">
-                <img class="img-fluid" alt="2" src="resources/images/slide2.png">
-              </div>
-              <div class="carousel-item">
-                <img class="img-fluid" alt="3" src="resources/images/slide3.png">
-              </div>
-              <div class="carousel-item">
-                <img class="img-fluid" alt="3" src="resources/images/slide4.png">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselCaptions" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselCaptions" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
-      </div>
       <div id="divisions">
         <div class="container mb-4">
           <div class="row">
@@ -322,8 +288,44 @@
           </div>
         </div>
       </div>
+      <!--
+      <div class="container" id="slideshow">
+        <div class="mb-4">
+          <div id="carouselCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselCaptions" data-slide-to="1" class="active"></li>
+              <li data-target="#carouselCaptions" data-slide-to="2"></li>
+              <li data-target="#carouselCaptions" data-slide-to="3"></li>
+              <li data-target="#carouselCaptions" data-slide-to="4"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                <img class="img-fluid" alt="1" src="resources/images/slide1.png">
+              </div>
+              <div class="carousel-item">
+                <img class="img-fluid" alt="2" src="resources/images/slide2.png">
+              </div>
+              <div class="carousel-item">
+                <img class="img-fluid" alt="3" src="resources/images/slide3.png">
+              </div>
+              <div class="carousel-item">
+                <img class="img-fluid" alt="3" src="resources/images/slide4.png">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselCaptions" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselCaptions" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      -->
       <!-- Footer -->
-      <footer>
+      <footer style="background-color: #e3f2fd;">
         <div class="container py-4">
           <div class="row">
             <!-- Contact -->
