--- a/index.html
+++ b/index.html
@@ -174,21 +174,21 @@
           <div class="row">
             <div class="col-md-4 py-2">
               <div class="card">
-                <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity">
+                <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity"> <br>
+                <button class="btn-outline-success" type="button" name="button" data-toggle="modal" data-target="#PrayerCity">Learn more</button>
               </div>
-              <button class="btn-outline-success" type="button" name="button" data-toggle="modal" data-target="#PrayerCity">Learn more</button>
             </div>
             <div class="col-md-4 py-2">
               <div class="card">
-                <img class="card-img" src="resources/images/reformationcity.png" alt="image of the ReformationCity">
+                <img class="card-img" src="resources/images/reformationcity.png" alt="image of the ReformationCity"> <br>
+                <button class="btn-outline-success" type="button" name="button" data-toggle="modal" data-target="#ReformationCity">Learn more</button>
               </div>
-              <button class="btn-outline-success" type="button" name="button" data-toggle="modal" data-target="#ReformationCity">Learn more</button>
             </div>
             <div class="col-md-4 py-2">
               <div class="card">
-                <img class="card-img img-fluid" src="resources/images/agedcity.png" alt="image of the AgedCity">
+                <img class="card-img img-fluid" src="resources/images/agedcity.png" alt="image of the AgedCity"> <br>
+                <button class="btn-outline-success" type="button" name="button" data-toggle="modal" data-target="#AgedCity">Learn more</button>
               </div>
-              <button class="btn-outline-success" type="button" name="button" data-toggle="modal" data-target="#AgedCity">Learn more</button>
             </div>
           </div>
         </div>
@@ -325,11 +325,11 @@
       </div>
       -->
       <!-- Footer -->
-      <footer style="background-color: #e3f2fd;">
+      <footer>
         <div class="container py-4">
           <div class="row">
             <!-- Contact -->
-            <div class="col-md-4 mb-5">
+            <div class="col-md-4">
               <h5 class="my-3">Contact Us</h5>
               <p><i class="fas fa-church fa-lg pr-2"></i> <a href="#!" target="_blank">Elevation City</a></p>
               <!-- <p><i class="fas fa-location-arrow fa-lg pr-2"></i> <a href="#!" target="_blank">....</a> </p> -->
@@ -352,6 +352,7 @@
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a>
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+              <img class="img-fluid" src="resources/images/logo1.png" width="150" alt="Image of Elevation Logo">
             </div>
           </div>
           <!-- Copyright -->
