--- a/index.html
+++ b/index.html
@@ -174,20 +174,20 @@
           <div class="row">
             <div class="col-md-4 py-2">
               <div class="card">
-                <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity"> <br>
-                <button class="btn-outline-success" type="button" name="button" data-toggle="modal" data-target="#PrayerCity">Learn more</button>
+                <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity">
+                <button class="btn-outline-success btn-md" type="button" name="button" data-toggle="modal" data-target="#PrayerCity">Learn more</button>
               </div>
             </div>
             <div class="col-md-4 py-2">
               <div class="card">
-                <img class="card-img" src="resources/images/reformationcity.png" alt="image of the ReformationCity"> <br>
-                <button class="btn-outline-success" type="button" name="button" data-toggle="modal" data-target="#ReformationCity">Learn more</button>
+                <img class="card-img" src="resources/images/reformationcity.png" alt="image of the ReformationCity">
+                <button class="btn-outline-success btn-md" type="button" name="button" data-toggle="modal" data-target="#ReformationCity">Learn more</button>
               </div>
             </div>
             <div class="col-md-4 py-2">
               <div class="card">
-                <img class="card-img img-fluid" src="resources/images/agedcity.png" alt="image of the AgedCity"> <br>
-                <button class="btn-outline-success" type="button" name="button" data-toggle="modal" data-target="#AgedCity">Learn more</button>
+                <img class="card-img img-fluid" src="resources/images/agedcity.png" alt="image of the AgedCity">
+                <button class="btn-outline-success btn-md" type="button" name="button" data-toggle="modal" data-target="#AgedCity">Learn more</button>
               </div>
             </div>
           </div>
@@ -352,7 +352,7 @@
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a>
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-              <img class="img-fluid" src="resources/images/logo1.png" width="150" alt="Image of Elevation Logo">
+              <img class="img-fluid" src="resources/images/logo1.png" width="200" alt="Image of Elevation Logo">
             </div>
           </div>
           <!-- Copyright -->
