--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
         </div>
       </nav>
       <!-- Navbar Toggler with Logo -->
-      <!--style="background-color: #e3f2fd;"-->
       <nav class="navbar navbar-dark bg-dark">
         <div class="container d-flex">
           <a class="navbar-brand" href="index.html"><img class="img-fluid" src="resources/images/logo2.png" width="150" alt="Image of Elevation Logo"></a>
@@ -288,43 +287,6 @@
           </div>
         </div>
       </div>
-      <!--
-      <div class="container" id="slideshow">
-        <div class="mb-4">
-          <div id="carouselCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselCaptions" data-slide-to="1" class="active"></li>
-              <li data-target="#carouselCaptions" data-slide-to="2"></li>
-              <li data-target="#carouselCaptions" data-slide-to="3"></li>
-              <li data-target="#carouselCaptions" data-slide-to="4"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active">
-                <img class="img-fluid" alt="1" src="resources/images/slide1.png">
-              </div>
-              <div class="carousel-item">
-                <img class="img-fluid" alt="2" src="resources/images/slide2.png">
-              </div>
-              <div class="carousel-item">
-                <img class="img-fluid" alt="3" src="resources/images/slide3.png">
-              </div>
-              <div class="carousel-item">
-                <img class="img-fluid" alt="3" src="resources/images/slide4.png">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselCaptions" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselCaptions" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      -->
-      <!-- Footer -->
       <footer>
         <div class="container py-4">
           <div class="row">
@@ -352,11 +314,12 @@
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a>
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-              <img class="img-fluid" src="resources/images/logo1.png" width="200" alt="Image of Elevation Logo">
+              <img class="img-fluid laptop" src="resources/images/logo1.png" width="200" alt="Image of Elevation Logo">
             </div>
           </div>
           <!-- Copyright -->
           <div class="copyright border-top mt-4 pt-5 text-center">
+            <img class="img-fluid tablet" src="resources/images/logo1.png" width="200" alt="Image of Elevation Logo">
             <p>&copy; 2023 Official Website of Elevation City. All rights reserved</p>
             <small>Powered By <a href="#!">WebHive Agency</a></small>
           </div>
