--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
           <div class="row">
             <div class="col-md-6 my-2" id="profile">
               <div class="titles">
-                <h4><a href="#!">Meet the Executive Director</a></h4>
+                <h4>Meet the Executive Director</h4>
               </div>
-              <div class="py-4 border-bottom text-center">
+              <div class="py-4 text-center">
                 <img class="img-fluid" src="resources/images/executived.jpeg" style="border-radius: 50%"  width="275" alt="img of Rev.">
                 <p class="font-weight-bold lead pt-2 pb-1">Very Rev. Dennis J. Boadu</p>
-                <button class="btn btn-md btn-secondary" type="button" name="button" data-toggle="modal" data-target="#exe-profile">Read more</button>
+                <button class="btn btn-md btn-info" type="button" name="button" data-toggle="modal" data-target="#exe-profile">Read more</button>
               </div>
               <div class="modal" id="exe-profile" tabindex="-1" role="dialog" aria-labelledby="modalScrollableLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-scrollable" role="document">
@@ -145,22 +145,22 @@
             </div>
             <div class="col-md-6 my-2" id="cityinfo">
               <div class="titles">
-                <h4><a href="#!">City Info</a></h4>
+                <h4>City Info</h4>
               </div>
               <div class="list-group">
                 <a href="intro.html" class="list-group-item list-group-item-action flex-column align-items-start">
                   <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Introduction</h5>
+                    <h5 class="my-2">Introduction</h5>
                   </div>
                 </a>
                 <a href="phases.html" class="list-group-item list-group-item-action flex-column align-items-start">
                   <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Project Phases</h5>
+                    <h5 class="my-2">Project Phases</h5>
                   </div>
                 </a>
                 <a href="location.html" class="list-group-item list-group-item-action flex-column align-items-start">
                   <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Location</h5>
+                    <h5 class="my-2">Location</h5>
                   </div>
                 </a>
               </div>
@@ -174,19 +174,19 @@
             <div class="col-md-4 py-2">
               <div class="card">
                 <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity">
-                <button class="btn-outline-success btn-md" type="button" name="button" data-toggle="modal" data-target="#PrayerCity">Learn more</button>
+                <button class="btn-outline-success btn-lg" type="button" name="button" data-toggle="modal" data-target="#PrayerCity">Learn more</button>
               </div>
             </div>
             <div class="col-md-4 py-2">
               <div class="card">
                 <img class="card-img" src="resources/images/reformationcity.png" alt="image of the ReformationCity">
-                <button class="btn-outline-success btn-md" type="button" name="button" data-toggle="modal" data-target="#ReformationCity">Learn more</button>
+                <button class="btn-outline-success btn-lg" type="button" name="button" data-toggle="modal" data-target="#ReformationCity">Learn more</button>
               </div>
             </div>
             <div class="col-md-4 py-2">
               <div class="card">
                 <img class="card-img img-fluid" src="resources/images/agedcity.png" alt="image of the AgedCity">
-                <button class="btn-outline-success btn-md" type="button" name="button" data-toggle="modal" data-target="#AgedCity">Learn more</button>
+                <button class="btn-outline-success btn-lg" type="button" name="button" data-toggle="modal" data-target="#AgedCity">Learn more</button>
               </div>
             </div>
           </div>
