--- a/history.html
+++ b/history.html
@@ -76,15 +76,7 @@
           </button>
         </div>
       </nav>
-      <div id="historybanner" class="container">
-        <div class="jumbotron">
-          <div class="row">
-            <div class="col-md-8 pb-4">
-            </div>
-            <div class="col-md-4">
-            </div>
-          </div>
-        </div>
+      <div id="historybanner" class="jumbotron jumbotron-fluid">
       </div>
       <!-- Main Content -->
       <div class="">
@@ -103,7 +95,7 @@
           </div>
           <!-- Brief History -->
           <div class="brief pb-5">
-            <h5>
+            <p>
               The initial work of the Elevation City started in the year 2007. <br><br>
               Even without physical structures to show, some pastors and a group
                of individuals have already been exposed to the vision of the
@@ -128,7 +120,7 @@
                  now and will do in the future.  <br><br>
                  This is what raises our hopes
                  and faith that the Elevation City is God’s agenda for today.
-            </h5>
+            </p>
           </div>
         </div>
       </div>
