--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         </div>
       </div>
       <div class="cover">
-        <div class="container py-2">
+        <div class="container">
           <div class="row">
-            <div class="col-md-6 my-2" id="profile">
+            <div class="col-md-6 py-2" id="profile">
               <div class="titles">
                 <h4>Meet the Executive Director</h4>
               </div>
@@ -143,7 +143,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 my-2" id="cityinfo">
+            <div class="col-md-6 py-2" id="cityinfo">
               <div class="titles">
                 <h4>City Info</h4>
               </div>
