--- a/history.html
+++ b/history.html
@@ -76,7 +76,7 @@
           </button>
         </div>
       </nav>
-      <div id="historybanner" class="jumbotron jumbotron-fluid">
+      <div id="historybanner">
       </div>
       <!-- Main Content -->
       <div class="">
