--- a/history.html
+++ b/history.html
@@ -76,8 +76,7 @@
           </button>
         </div>
       </nav>
-      <div id="historybanner">
-      </div>
+      <img src="resources/images/landing.jpg" alt="">
       <!-- Main Content -->
       <div class="">
         <div class="container">
