--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <!-- Main Body -->
       <div id="banner">
         <div class="jumbotron jumbotron-fluid">
-          <div class="container row">
-            <div class="col-md-7">
+          <div class="row">
+            <div class="container col-md-7">
               <h2 class="font-weight-bold display-4">Elevation City</h2>
               <h3 class="lead font-weight-bold">To know Christ Jesus and make Him known to all...</h3>
               <p class="pt-4"><a href="about.html"><button class="btn btn-lg btn-info" type="button" name="button">About Us</button></a></p>
@@ -171,19 +171,19 @@
       <div id="divisions">
         <div class="container mb-4">
           <div class="row">
-            <div class="col-md-4 py-2">
+            <div class="col-md-4 py-1">
               <div class="card">
                 <img class="card-img img-fluid" src="resources/images/prayercity.png" alt="image of the PrayerCity">
                 <button class="btn-outline-success btn-lg" type="button" name="button" data-toggle="modal" data-target="#PrayerCity">Learn more</button>
               </div>
             </div>
-            <div class="col-md-4 py-2">
+            <div class="col-md-4 py-1">
               <div class="card">
                 <img class="card-img" src="resources/images/reformationcity.png" alt="image of the ReformationCity">
                 <button class="btn-outline-success btn-lg" type="button" name="button" data-toggle="modal" data-target="#ReformationCity">Learn more</button>
               </div>
             </div>
-            <div class="col-md-4 py-2">
+            <div class="col-md-4 py-1">
               <div class="card">
                 <img class="card-img img-fluid" src="resources/images/agedcity.png" alt="image of the AgedCity">
                 <button class="btn-outline-success btn-lg" type="button" name="button" data-toggle="modal" data-target="#AgedCity">Learn more</button>
@@ -314,12 +314,11 @@
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a>
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-youtube fa-2x"></i></a>
               <a class="pr-4" href="#!" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-              <img class="img-fluid laptop" src="resources/images/logo1.png" width="200" alt="Image of Elevation Logo">
+              <img class="img-fluid" src="resources/images/logo2.png" width="120" alt="Image of Elevation Logo">
             </div>
           </div>
           <!-- Copyright -->
           <div class="copyright border-top mt-4 pt-5 text-center">
-            <img class="img-fluid tablet" src="resources/images/logo1.png" width="200" alt="Image of Elevation Logo">
             <p>&copy; 2023 Official Website of Elevation City. All rights reserved</p>
             <small>Powered By <a href="#!">WebHive Agency</a></small>
           </div>
