--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <!-- Main Body -->
       <div id="banner">
         <div class="jumbotron jumbotron-fluid">
-          <div class="row">
-            <div class="container col-md-7">
+          <div class="row container">
+            <div class="col-md-7">
               <h2 class="font-weight-bold display-4">Elevation City</h2>
               <h3 class="lead font-weight-bold">To know Christ Jesus and make Him known to all...</h3>
               <p class="pt-4"><a href="about.html"><button class="btn btn-lg btn-info" type="button" name="button">About Us</button></a></p>
@@ -90,7 +90,7 @@
           </div>
         </div>
       </div>
-      <div class="cover">
+      <div class="cover mt-0">
         <div class="container">
           <div class="row">
             <div class="col-md-6 py-2" id="profile">
