--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
       </nav>
       <!-- Main Body -->
-      <div id="banner">
+      <div id="banner" class="cover">
         <div class="jumbotron jumbotron-fluid">
           <div class="row container">
             <div class="col-md-7">
